Thu Jul 31 01:33:17 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/mvm.h (rb_thread_lock_t): needed for inter-VM lock.

	* io.c (max_file_descriptor_lock): should be initialized.

	* pack.c (pack_unpack): lock for MVM.

Thu Jul 31 01:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_unlock_all): mutex is no longer a ruby object.

Thu Jul 31 01:11:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_specific_ptr): fix for reallocation.

Fri Jul 25 23:24:07 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (get_stack): subtract guard size.

	* thread_pthread.c (thread_start_func_1): fix for stack size
	  adjustment.

	* thread_pthread.c (ruby_stack_overflowed_p): take thread and the
	  address.

	* gc.c (ruby_stack_check): check overflow.

	* signal.c (sigsegv): use ruby_stack_overflowed_p.

Fri Jul 25 16:21:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h (ruby_absolute_path_p): published.

	* io.c (rb_sysopen_prepare): fix for non-openat platforms.

	* thread.c (ruby_thread_getcwd): fix for non-openat platforms.

	* util.c (ruby_sys_getcwd): renamed and reverted.

Tue Jul 22 21:07:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (get_cwd_fd): returns int.

Thu Jul 17 13:13:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): set script_name directly and translate
	  before frozen.

	* ruby.c (set_arg0): now setter of VM specific variable is called for
	  the pointer instead of the key.

Thu Jul 17 06:09:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (get_cwd_fd): support for platforms which has fchdir but no
	  openat.

Fri Jul 11 16:45:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (gvar): make global/static variables list.

Fri Jul 11 15:01:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_run_exec_options): default to thread cwd.

Fri Jul 11 06:45:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>